--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
@@ -41,6 +48,8 @@ playground.xcworkspace
 # Package.pins
 # Package.resolved
 # *.xcodeproj
+!*.xcworkspace/contents.xcworkspacedata
+**/xcshareddata/WorkspaceSettings.xcsettings
 #
 # Xcode automatically generates this directory with a .xcworkspacedata file and xcuserdata
 # hence it is not needed unless you have added a package configuration file to your project
@@ -58,7 +67,7 @@ playground.xcworkspace
 #
 # Add this line if you want to avoid checking in source code from the Xcode workspace
 # *.xcworkspace
-
+Pods/Manifest.lock
 # Carthage
 #
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
